| Bug #10957 | stop instance, issued after flush instances causes IM to crash | ||
|---|---|---|---|
| Submitted: | 30 May 2005 11:38 | Modified: | 24 Aug 2005 17:34 |
| Reporter: | Petr Chardin | Email Updates: | |
| Status: | Closed | ||
| Category: | Instance Manager | Severity: | S3 (Non-critical) |
| Version: | 5.0.x | OS: | Linux (Suse Linux) |
| Assigned to: | Petr Chardin | Target Version: | |
[27 Jun 2005 11:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/26440
[19 Aug 2005 13:23]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/28531
[19 Aug 2005 13:42]
Petr Chardin
pushed into 5.0.12
[24 Aug 2005 17:34]
Mike Hillyer
Documented in 5.0.12 changelog: <listitem><para>Issuing <literal>FLUSH INSTANCES</literal> followed by <literal>STOP INSTANCE</literal> caused instance manager to crash. (Bug #10957)</para></listitem>

Description: this commands sequence crashes IM start instance <instance_name>; flush instances; stop instance <same_instance>; This happens due to the way reload procedure works: we destroy the mutex in flush instances, which we try to use later to refresh the info when instance is stopped. How to repeat: see description section Suggested fix: get the instance object and mutex from instance_map each time. (now it is saved in the function context)