Fix for BUG#10957 "stop instance, issued after flush instances causes IM to crash" Recommited with post-review fixes